# scs

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  IMPORTANT.md  README.md  docs.json  lcscs.version.in  pipeline.jsonc  scs.doxygen.in  testnet.template
.cicd/: base-images.yml  build-scripts.yml  build.sh  docker-tag.sh  generate-pipeline.sh  installation-build.sh  multiversion.sh
.cicd/helpers/: file-hash.sh  multi_eos_docker.py
.cicd/metrics/: test-metrics.js
CMakeModules/: LcscsTester.cmake.in  LcscsTesterBuild.cmake.in  MASSigning.cmake  additionalPlugins.cmake  doxygen.cmake  lcscs-config.cmake.in  package.cmake
docs/: index.md
docs/00_install/: 00_install-prebuilt-binaries.md  index.md
docs/01_nodscs/: index.md
docs/02_clscs/: 04_troubleshooting.md  05_FAQ.md  index.md
docs/03_kscsd/: 10_usage.md  20_security.md  35_wallet-specification.md  40_troubleshooting.md  50_FAQ.md  index.md
libraries/: CMakeLists.txt
libraries/chain/: CMakeLists.txt  abi_serializer.cpp  apply_context.cpp  asset.cpp  authorization_manager.cpp  block.cpp  block_header.cpp  block_header_state.cpp  block_log.cpp  block_state.cpp  chain_config.cpp  chain_id_type.cpp  controller.cpp  fork_database.cpp  genesis_intrinsics.cpp  genesis_state.cpp  genesis_state_root_key.cpp.in  lcscs_contract.cpp  lcscs_contract_abi.cpp  lcscs_contract_abi_bin.cpp  merkle.cpp  name.cpp  platform_timer_accuracy.cpp  platform_timer_asio_fallback.cpp  platform_timer_macos.cpp  platform_timer_posix.cpp  producer_schedule.cpp  protocol_feature_activation.cpp  protocol_feature_manager.cpp  protocol_state_object.cpp  resource_limits.cpp  snapshot.cpp  thread_utils.cpp  trace.cpp  transaction.cpp  transaction_context.cpp  transaction_metadata.cpp  wasm_interface.cpp  wasm_lcscs_binary_ops.cpp  wasm_lcscs_injection.cpp  (+3 more)
libraries/chain/include/lcscs/chain/: abi_def.hpp  abi_serializer.hpp  account_object.hpp  action.hpp  action_receipt.hpp  apply_context.hpp  asset.hpp  authority.hpp  authority_checker.hpp  authorization_manager.hpp  block.hpp  block_header.hpp  block_header_state.hpp  block_log.hpp  block_state.hpp  block_summary_object.hpp  block_timestamp.hpp  chain_config.hpp  chain_id_type.hpp  chain_snapshot.hpp  code_object.hpp  config.hpp  contract_table_objects.hpp  contract_types.hpp  controller.hpp  database_header_object.hpp  database_utils.hpp  exceptions.hpp  fixed_bytes.hpp  fixed_key.hpp  fork_database.hpp  generated_transaction_object.hpp  genesis_intrinsics.hpp  genesis_state.hpp  global_property_object.hpp  incremental_merkle.hpp  lcscs_contract.hpp  merkle.hpp  name.hpp  parallel_markers.hpp  (+30 more)
libraries/chain/include/lcscs/chain/webassembly/: common.hpp  runtime_interface.hpp  scs-vm-oc.hpp  scs-vm.hpp  wabt.hpp  wavm.hpp
libraries/chain/include/lcscs/chain/webassembly/scs-vm-oc/: code_cache.hpp  compile_monitor.hpp  compile_trampoline.hpp  config.hpp  executor.hpp  gs_seg_helpers.h  intrinsic.hpp  intrinsic_mapping.hpp  ipc_helpers.hpp  ipc_protocol.hpp  memory.hpp  scs-vm-oc.h  scs-vm-oc.hpp
libraries/chain/webassembly/: scs-vm-oc.cpp  scs-vm.cpp  wabt.cpp
libraries/chain/webassembly/scs-vm-oc/: About WAVM  LLVMEmitIR.cpp  LLVMJIT.cpp  LLVMJIT.h  code_cache.cpp  compile_monitor.cpp  compile_trampoline.cpp  executor.cpp  gs_seg_helpers.c  intrinsic.cpp  ipc_helpers.cpp  llvmWARshim.llvmwar  memory.cpp
libraries/testing/: CMakeLists.txt  tester.cpp  tester_network.cpp
patches/fc/: README.md  update-public_key_legacy_prefix-to-SCS.patch
plugins/: COMMUNITY.md  lcscs-make_new_plugin.sh
plugins/chain_api_plugin/: CMakeLists.txt  chain.swagger.yaml  chain_api_plugin.cpp
plugins/chain_plugin/: CMakeLists.txt  account_query_db.cpp  chain_plugin.cpp
plugins/db_size_api_plugin/: CMakeLists.txt  db_size.swagger.yaml  db_size_api_plugin.cpp
plugins/faucet_testnet_plugin/: CMakeLists.txt  faucet_testnet_plugin.cpp
plugins/history_api_plugin/: CMakeLists.txt  history_api_plugin.cpp
plugins/history_plugin/: CMakeLists.txt  history_plugin.cpp
programs/: CMakeLists.txt
programs/clscs/: CMakeLists.txt  (+8 more)
programs/lcscs-blocklog/: CMakeLists.txt  main.cpp
scripts/: .build_vars  .environment  CMakeLists.txt  apply_patch.sh  generate_bottle.sh  generate_tarball.sh  lcscs-tn_bounce.sh  lcscs-tn_down.sh  lcscs-tn_roll.sh  lcscs-tn_up.sh  lcscs_build.sh  lcscs_build_amazonlinux.sh  lcscs_build_centos.sh  lcscs_build_darwin.sh  lcscs_build_ubuntu.sh  lcscs_install.sh  lcscs_uninstall.sh
tests/: CMakeLists.txt  Cluster.py  Node.py  TestHelper.py  WalletMgr.py  block_log_util_test.py  chain_plugin_tests.cpp  cli_test.py  consensus-validation-malicious-producers.py  db_modes_test.sh  distributed-transactions-remote-test.py  distributed-transactions-test.py  get_table_tests.cpp  impaired_network.py  kscsd_auto_launch_test.py  launcher_test.py  lossy_network.py  main.cpp  nodscs_chainbase_allocation_test.py  nodscs_forked_chain_test.py  nodscs_irreversible_mode_test.py  nodscs_multiple_version_protocol_feature_test.py  nodscs_producer_watermark_test.py  nodscs_protocol_feature_test.py  nodscs_run_remote_test.py  nodscs_run_test.py  nodscs_short_fork_take_over_test.py  nodscs_startup_catchup.py  nodscs_under_min_avail_ram.py  nodscs_voting_test.py  p2p_network_test.py  p2p_stress.py  p2p_test_peers.py  prod_preactivation_test.py  release-build.sh  restart-scenarios-test.py  testUtils.py  trans_sync_across_mixed_cluster_test.sh  validate-dirty-db.py  version-label.sh  (+1 more)
unittests/: CMakeLists.txt  abi_tests.cpp  api_tests.cpp  auth_tests.cpp  block_tests.cpp  block_timestamp_tests.cpp  bootseq_tests.cpp  contracts.hpp.in  currency_tests.cpp  database_tests.cpp  delay_tests.cpp  fork_test_utilities.hpp  forked_tests.cpp  lcscs.token_tests.cpp  lcscs_system_tester.hpp  main.cpp  misc_tests.cpp  payloadless_tests.cpp  producer_schedule_tests.cpp  protocol_feature_tests.cpp  ram_tests.cpp  resource_limits_test.cpp  restart_chain_tests.cpp  snapshot_tests.cpp  snapshots.hpp.in  special_accounts_tests.cpp  unapplied_transaction_queue_tests.cpp  wasm_tests.cpp  whitelist_blacklist_tests.cpp
(+402 files in other folders)
